# DIU_Transport_Schedule_App

./: .firebaserc
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  patcher_jni.cpp
app/src/main/java/com/sohan/diutransportschedule/: MainActivity.kt  ScheduleAlarmReceiver.kt
app/src/main/java/com/sohan/diutransportschedule/db/: JsonConverters.kt
app/src/main/java/com/sohan/diutransportschedule/sync/: AdminMessagingService.kt  ApkDownloadReceiver.kt  ApkDownloader.kt  ScheduleRepository.kt  UpdateChecker.kt
app/src/main/java/com/sohan/diutransportschedule/ui/: HomeScreen.kt  HomeViewModel.kt  LiveMap.kt  MainNav.kt  MbtilesDownloadWorker.kt  NoticeScreen.kt  PremiumBottomBar.kt  ProfileScreen.kt
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: file_paths.xml
functions/: index.js  package-lock.json
keystore/: diu_transport.jks
